# bulqit-keegan-agent

./: .gitignore  README.md  agent.md  cartesia.toml  config.py  knowledge_base.txt  llm_node.py  main.py  nextdoor_scanner_backup_20250715_091716_duplicate_scanning_bug.py  pyproject.toml  requirements.txt
